@@ -161,9 +161,11 @@ sub _table
                                   ),
                               new EBox::Types::Int(
                                   'fieldName' => 'mailboxSize',
-                                  'printableName' => __('size in Mb'),
+                                  'printableName' => __('limited to'),
+                                  'trailingText'  => 'MB',
                                   'editable'  => 1,
                                   'min'       => 1,
+                                  'size'      => 5,
                                       ),
                                   ],
              ),
@@ -178,10 +180,12 @@ sub _table
                                   ),
                               new EBox::Types::Int(
                                   'fieldName' => 'msgSize',
-                                  'printableName' => __('size in Mb'),
+                                  'printableName' => __('limited to'),
+                                  'trailingText'  => 'MB',
                                   'editable'  => 1,
                                   'min'       => 1,
                                   'max'       => MAX_MSG_SIZE,
+                                  'size'      => 5,
                                       ),
                                   ],
              ),
@@ -196,9 +200,11 @@ sub _table
                                   ),
                               new EBox::Types::Int(
                                   'fieldName' => 'daysExpireDeleted',
-                                  'printableName' => __('days'),
+                                  'printableName' => __('expired in'),
+                                  'trailingText'  => __('days'),
                                   'editable'  => 1,
                                   'min'       => 1,
+                                  'size'      => 5,
                                       ),
                                   ],
              ),
@@ -213,9 +219,11 @@ sub _table
                                   ),
                               new EBox::Types::Int(
                                   'fieldName' => 'daysExpireSpam',
-                                  'printableName' => __('days'),
+                                  'printableName' => __('expired in'),
+                                  'trailingText'  => __('days'),
                                   'editable'  => 1,
                                   'min'       => 1,
+                                  'size'      => 5,
                                       ),
                                   ],
              ),
